--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <span id="letter9">_</span>
             <span id="letter10">_</span>
         </h3>
-        <input type="text" id="myButton">
+        <input type="text" id="myInput">
         <button id="myButton">Check</button>
+        <h2 id="output">Output</h2>
         <script src="script.js">
 
         </script>
