--- a/index.html
+++ b/index.html
@@ -9,19 +9,8 @@
     </head>
     <body>
         <h1>HangMan</h1>
-        <img src="images/costume2.svg" alt="">
-        <h3>
-            <span id="letter1">_</span>
-            <span id="letter2">_</span>
-            <span id="letter3">_</span>
-            <span id="letter4">_</span>
-            <span id="letter5">_</span>
-            <span id="letter6">_</span>
-            <span id="letter7">_</span>
-            <span id="letter8">_</span>
-            <span id="letter9">_</span>
-            <span id="letter10">_</span>
-        </h3>
+        <img src="Images/costume2.svg" alt="" id="hangmanImage">
+        <h3 id="myProgress"></h3>
         <input type="text" id="myInput">
         <button id="myButton">Check</button>
         <h2 id="output">Output</h2>
